Replace the http client by httpurlconnection (more flexible)