@@ -1,15 +1,12 @@
 package info.lamatricexiste.couchdb;
 
-import java.io.ByteArrayOutputStream;
+import java.io.BufferedReader;
+import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.URI;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.impl.client.DefaultHttpClient;
 import org.json.JSONException;
 import org.json.JSONObject;
 
@@ -87,7 +84,7 @@ public class Main extends Activity {
                 // Replication test
                 json = new JSONObject("{'source':'" + getString(R.string.server_master)
                         + "','target':'contacts','create_target':true}");
-                byte[] data = sendRequest(host, port, json.toString());
+                sendRequest(host, port, "POST", "_replicate", json.toString());
             }
             catch (JSONException e) {
                 e.printStackTrace();
@@ -105,70 +102,39 @@ public class Main extends Activity {
 
     };
 
-    private byte[] sendRequest(String host, int port, String req) {
-        HttpEntity entity = null;
-        InputStream is = null;
-        HttpPost method = null;
-        byte[] data = null;
+    private void sendRequest(String host, int port, String method, String action, String data) {
+        StringBuffer sb = new StringBuffer();
         try {
-            DefaultHttpClient client = new DefaultHttpClient();
-            method = new HttpPost(new URI("http", null, host, port, "/_replicate", null, null));
-            method.addHeader("Content-type", "application/json; charset=UTF-8");
-            method.setEntity(new StringEntity(req));
-            HttpResponse response = client.execute(method);
-            entity = response.getEntity();
-            is = entity.getContent();
+            HttpURLConnection c = (HttpURLConnection) new URL("http://" + host + ":" + port + "/"
+                    + action).openConnection();
+            String charEncoding = "iso-8859-1";
+            c.setDoOutput(true);
+            c.setUseCaches(false);
+            c.setRequestMethod(method);
+            c.setRequestProperty("Content-type", "application/json; charset=UTF-8");
+
+            if (method != "GET" && data != null) {
+                c.setDoInput(true);
+                c.setRequestProperty("Content-Length", Integer.toString(data.length()));
+                c.getOutputStream().write(data.getBytes(charEncoding));
+            }
+            c.connect();
+            try {
+                BufferedReader rd = new BufferedReader(new InputStreamReader(c.getInputStream()));
+                String line;
+                while ((line = rd.readLine()) != null) {
+                    sb.append(line);
+                }
+                rd.close();
+            }
+            catch (FileNotFoundException e) {}
+            catch (NullPointerException e) {}
+            finally {
+                c.disconnect();
+            }
         }
-        catch (Exception e) {
+        catch (IOException e) {
             e.printStackTrace();
         }
-        finally {
-            if (is != null) {
-                data = readFully(is);
-            }
-            if (method != null) {
-                method.abort();
-            }
-            if (entity != null) {
-                try {
-                    entity.consumeContent();
-                }
-                catch (IOException e) {}
-            }
-            if (is != null) {
-                try {
-                    is.close();
-                }
-                catch (final IOException ignore) {}
-            }
-        }
-        return data;
-    }
-
-    private byte[] readFully(final InputStream is) {
-        ByteArrayOutputStream out = null;
-        final byte[] buffer = new byte[1024];
-        byte[] result;
-        try {
-            out = new ByteArrayOutputStream();
-            int read;
-            while ((read = is.read(buffer)) != -1) {
-                out.write(buffer, 0, read);
-            }
-            out.flush();
-            result = out.toByteArray();
-        }
-        catch (final IOException e) {
-            result = new byte[0];
-        }
-        finally {
-            if (out != null) {
-                try {
-                    out.close();
-                }
-                catch (final IOException ignore) {}
-            }
-        }
-        return result;
     }
 }
